# gdma

./: .gitignore  CMakeLists.txt  ChangeLog  INSTALL  LICENCE  Makefile  README  README.md  README.txt  ToDo  VERSION  gdmaConfig.cmake.in  mulfit-2.1.tgz
cmake/: Psi4Macros.cmake  gdmaConfig.cmake.in
doc/: Makefile  editbbl.pl  manual.bbl  manual.tex
doc/pictures/: README
examples/: diff.pl  diff.py  gdma_tests.py  run.tests
examples/C2H4/G03/: C2H4.punch.check
examples/C2H4_G03/: data  out.check
examples/CO/G03/: data
examples/CO_G03/: CO.punch.check  out.check
examples/H2O/: H2O.punch.check  data  out.check
examples/formamide/: out.check
examples/formamide/psi4/: HCONH2-av5z-dma.out  HCONH2-dma4.punch.check  HCONH2.psi4  data  out.check
examples/formamide_G03/: B3LYP_cc-pVTZ.punch.check  data
examples/formamide_psi4/: HCONH2.psi4  README
pygdma/: CMakeLists.txt  bindings.cc.cmake.in
src/: Makefile  atom_grids.f90  dma.f90  exe.f90  gdma  gdma.f90  input.F90  timing.F90  version.py
